--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,7 +6,9 @@
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.nuget.newtonsoft-json": "3.2.1",
+    "com.unity.performance.profile-analyzer": "1.2.2",
     "com.unity.probuilder": "5.2.2",
+    "com.unity.profiling.core": "1.0.2",
     "com.unity.render-pipelines.universal": "16.0.6",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
